--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
 	},
 	"require": {
 		"php": ">=5.2.4",
+		"xrstf/composer-php52": "1.*",
 		"wp-pay/core": "dev-develop",
 		"wp-pay-gateways/common": "dev-develop",
 		"wp-pay-gateways/ideal": "dev-develop",
@@ -35,5 +36,16 @@
 	},
 	"require-dev": {
 		"satooshi/php-coveralls": "dev-master"
+	},
+	"scripts": {
+		"post-install-cmd": [
+			"xrstf\\Composer52\\Generator::onPostInstallCmd"
+		],
+		"post-update-cmd": [
+			"xrstf\\Composer52\\Generator::onPostInstallCmd"
+		],
+		"post-autoload-dump": [
+			"xrstf\\Composer52\\Generator::onPostInstallCmd"
+		]
 	}
 }
