--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ sudo: false
 language: php
 
 matrix: 
+  allow_failures:
+    - php: 7.0
+    - php: hhvm
   include:
     - php: 5.2
       env: WP_VERSION=latest WP_MULTISITE=1
@@ -15,12 +18,18 @@ matrix:
     - php: 5.5
       env: WP_VERSION=4.0
     - php: 5.6
-      env: WP_VERSION=4.0
+      env: WP_VERSION=4.0 COVERAGE=1 GRUNT=1
     - php: 7.0
-      env: WP_VERSION=4.0 COVERAGE=1
+      env: WP_VERSION=4.0
     - php: hhvm
       env: WP_VERSION=4.0
   fast_finish: true
+
+cache:
+  directories:
+    - node_modules
+    - vendor
+    - $HOME/.composer/cache
 
 before_script:
   - bash bin/travis-before_script.sh
