--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,9 @@
 		"wp-pay-gateways/ideal-basic": "dev-develop"
 	},
 	"require-dev": {
+		"squizlabs/php_codesniffer": "^2.2.0",
+		"wp-coding-standards/wpcs": "~0.6",
+		"phpmd/phpmd": "^2.2.3",
 		"satooshi/php-coveralls": "dev-master"
 	},
 	"scripts": {
