--- a/composer.json
+++ b/composer.json
@@ -42,12 +42,10 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
-			"xrstf\\Composer52\\Generator::onPostInstallCmd",
-			"bin/install-wpcs"
+			"xrstf\\Composer52\\Generator::onPostInstallCmd"
 		],
 		"post-update-cmd": [
-			"xrstf\\Composer52\\Generator::onPostInstallCmd",
-			"bin/install-wpcs"
+			"xrstf\\Composer52\\Generator::onPostInstallCmd"
 		],
 		"post-autoload-dump": [
 			"xrstf\\Composer52\\Generator::onPostInstallCmd"
