No longer allow failures.

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
 		"phpmd/phpmd": "^2.2.3",
 		"satooshi/php-coveralls": "dev-master",
 		"squizlabs/php_codesniffer": "^2.2.0",
-		"wp-coding-standards/wpcs": "0.8.0"
+		"wp-coding-standards/wpcs": "0.8.0",
+		"wp-cli/wp-cli": "^0.21.1"
 	},
 	"scripts": {
 		"post-install-cmd": [
