--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
 	},
 	"require-dev": {
 		"phpmd/phpmd": "^2.2.3",
-		"satooshi/php-coveralls": "dev-master",
+		"satooshi/php-coveralls": "^0.7.1",
 		"squizlabs/php_codesniffer": "^2.2.0",
 		"wp-coding-standards/wpcs": "0.8.0",
 		"wp-cli/wp-cli": "^0.21.1"
